--- a/emacs.org
+++ b/emacs.org
@@ -38,11 +38,13 @@
     helm
     helm-c-yasnippet
     helm-descbinds
+    helm-projectile
     helm-swoop
     iasm-mode
     igrep
     magit
     multi-term
+    projectile
     smart-mode-line
     swiper
     swiper-helm
@@ -220,9 +222,24 @@
 (define-key tab-map (kbd "u") 'universal-argument)
 
 (define-key tab-map (kbd "m") 'magit-command-map)
+(define-key tab-map (kbd "p") 'alt-projectile-command-map)
 
 (define-key tab-map (kbd "f") 'flyspell-mode)
 #+end_src
+
+** projectile
+#+BEGIN_SRC emacs-lisp
+(projectile-global-mode t)
+
+(defvar alt-projectile-command-map
+  (let ((map (make-sparse-keymap)))
+    (define-key map (kbd "m") 'helm-projectile-grep)
+    (define-key map (kbd "h") 'helm-projectile)
+    (define-key map (kbd "d") 'projectile-dired)
+    map))
+ (fset 'alt-projectile-command-map alt-projectile-command-map)
+
+#+END_SRC
 
 ** cua-mode
 #+begin_src emacs-lisp
@@ -525,7 +542,6 @@ Recognized window header names are: 'comint, 'locals, 'registers,
 (require 'all-ext) ;; C-c C-a jumps to all from helm-occur
 #+end_src
 ** magit
-
 #+begin_src emacs-lisp
 (defvar magit-command-map
   (let ((map (make-sparse-keymap)))
@@ -535,7 +551,7 @@ Recognized window header names are: 'comint, 'locals, 'registers,
     (define-key map (kbd "l") 'magit-log)
     (define-key map (kbd "d") 'magit-diff)
     map))
-(fset 'magit-command-map magit-command-map)
+ (fset 'magit-command-map magit-command-map)
 #+end_src
 ** swift
 #+begin_src emacs-lisp
