--- a/emacs.org
+++ b/emacs.org
@@ -96,6 +96,15 @@
      '(mode-line-inactive ((t (:background "#101010"))))
      '(mode-line ((t (:background "#404040"))))
      '(hl-line ((t (:inherit nil :background "#222222"))))
+     '(minibuffer-prompt ((t (:foreground "#ff584d"))))
+
+     '(font-lock-builtin-face ((((class color) (min-colors 89)) (:foreground "#ff685d"))))
+     '(font-lock-constant-face ((((class color) (min-colors 89)) (:foreground "#ff685d"))))
+
+
+     '(helm-selection ((t (:background "grey29" :distant-foreground "black"))))
+     '(helm-source-header ((t (:background "#450a6b" :foreground "#dddddd" :weight bold :height 1.3 :family "Sans Serif"))))
+
 )
 
 (cond
