fixing previous commit

--- a/emacs.org
+++ b/emacs.org
@@ -733,7 +733,7 @@ Recognized window header names are: 'comint, 'locals, 'registers,
 
 (global-set-key [f5] (lambda ()
     (interactive)
-    (find-file "~/notes.org"))
+    (find-file "~/notes.org")))
 
 #+end_src
 
