--- a/emacs.org
+++ b/emacs.org
@@ -82,51 +82,55 @@
 (customize-set-variable 'menu-bar-mode nil)
 (customize-set-variable 'tool-bar-mode nil)
 
-(custom-set-variables
-'(custom-enabled-themes (quote (wombat))) 
- '(custom-safe-themes
-   (quote
-    ("a27c00821ccfd5a78b01e4f35dc056706dd9ede09a8b90c6955ae6a390eb1c1e"
-    "3c83b3676d796422704082049fc38b6966bcad960f896669dfc21a7a37a748fa" default)))
-)
+(if (display-graphic-p)
+	(progn
 
-(custom-set-faces
-     '(default ((t (:background "#101515"))))
-     '(cursor ((t (:background "OrangeRed"))))
-     '(mode-line-inactive ((t (:background "#101010"))))
-     '(mode-line ((t (:background "#404040"))))
-     '(hl-line ((t (:inherit nil :background "#222222"))))
-     '(minibuffer-prompt ((t (:foreground "#ff584d"))))
+	  (custom-set-variables
+	   '(custom-enabled-themes (quote (wombat))) 
+	   '(custom-safe-themes
+		 (quote
+		  ("a27c00821ccfd5a78b01e4f35dc056706dd9ede09a8b90c6955ae6a390eb1c1e"
+		   "3c83b3676d796422704082049fc38b6966bcad960f896669dfc21a7a37a748fa" default)))
+	   )
 
-	 ;; Make some default wombat colours a bit more lively
-     '(font-lock-builtin-face ((((class color) (min-colors 89)) (:foreground "#ff685d"))))
-     '(font-lock-constant-face ((((class color) (min-colors 89)) (:foreground "#ff685d"))))
+	  (custom-set-faces
+       '(default ((t (:background "#101515"))))
+       '(cursor ((t (:background "OrangeRed"))))
+       '(mode-line-inactive ((t (:background "#101010"))))
+       '(mode-line ((t (:background "#404040"))))
+       '(hl-line ((t (:inherit nil :background "#222222"))))
+       '(minibuffer-prompt ((t (:foreground "#ff584d"))))
 
-	 ;; Some default helm faces are quite ugly... let's fix em up.
-     '(helm-selection ((t (:background "grey24" :distant-foreground "black"))))
-     '(helm-buffer-directory ((t (:weight bold :foreground "LightSlateBlue" :distant-foreground "black"))))
-     '(helm-ff-directory ((t :inherit helm-buffer-directory )))
-     '(helm-source-header ((t (:background "#450a6b" :foreground "#dddddd" :weight bold :height 1.3 :family "Sans Serif"))))
+	   ;; Make some default wombat colours a bit more lively
+       '(font-lock-builtin-face ((((class color) (min-colors 89)) (:foreground "#ff685d"))))
+       '(font-lock-constant-face ((((class color) (min-colors 89)) (:foreground "#ff685d"))))
 
-)
+	   ;; Some default helm faces are quite ugly... let's fix em up.
+       '(helm-selection ((t (:background "grey24" :distant-foreground "black"))))
+       '(helm-buffer-directory ((t (:weight bold :foreground "LightSlateBlue" :distant-foreground "black"))))
+       '(helm-ff-directory ((t :inherit helm-buffer-directory )))
+       '(helm-source-header ((t (:background "#450a6b" :foreground "#dddddd" :weight bold :height 1.3 :family "Sans Serif"))))
 
-(cond
- ((string-equal system-type "windows-nt")
-  (cond
-   ((member "ProggyClean" (font-family-list))
-    (set-frame-font "ProggyClean"))
+	   )
 
-   ((member "Consolas-10" (font-family-list))
-    (set-frame-font "Consolas-10")))
-  )
+	  (cond
+	   ((string-equal system-type "windows-nt")
+		(cond
+		 ((member "ProggyClean" (font-family-list))
+		  (set-frame-font "ProggyClean"))
 
- ((string-equal system-type "gnu/linux")
-  (set-frame-font "Monospace-10"))
- )
+		 ((member "Consolas-10" (font-family-list))
+		  (set-frame-font "Consolas-10")))
+		)
 
+	   ((string-equal system-type "gnu/linux")
+		(set-frame-font "Monospace-10"))
+	   )
 
-(global-hl-line-mode t)
-(sml/setup)
+       (global-hl-line-mode t)
+       (sml/setup)
+
+	  ))
 #+END_SRC
 
 ** Buffer names
