--- a/emacs.org
+++ b/emacs.org
@@ -287,9 +287,7 @@
 
 (defhydra hydra-projectile (:color blue)
 
-    "
-projectile  (\\/)(Ö,,,,Ö)(\\/) 
-"
+    "projectile"
     ("m" helm-projectile-grep "grep")
     ("h" helm-projectile "helm files")
     ("d" projectile-dired "dired")
@@ -597,9 +595,7 @@ Recognized window header names are: 'comint, 'locals, 'registers,
 ** magit
 #+begin_src emacs-lisp
 (defhydra hydra-magit (:color blue)
-    "
-magit
-"
+    "magit"
      ("m" magit-status "status")
      ("p" magit-pull "pull")
      ("P" magit-push "push")
@@ -775,9 +771,8 @@ magit
 (find-file "~/notes/temp")
 )
 
-(defhydra hydra-quickopen (:color pink)
+(defhydra hydra-quickopen (:color blue)
 "
-龴ↀ◡ↀ龴   ʕ•ᴥ•ʔ
 [_t_] ~/notes/temp
 [_n_] ~/notes/notes.org
 [_c_] ~/.emacs.d/emacs.org
@@ -785,8 +780,6 @@ magit
 ("t" qo-temp nil)
 ("n" qo-notes-org nil)
 ("c" qo-emacs-org nil)
-
-("q"  nil "cacel")
 )
 
 #+END_SRC
