disabling mode line for anzu mode

--- a/emacs.org
+++ b/emacs.org
@@ -201,6 +201,9 @@
 (bind-key* "M-u" 'backward-word)
 (bind-key* "M-o" 'forward-word)
 
+(bind-key* "C-M-u" 'backward-sexp)
+(bind-key* "C-M-o" 'forward-sexp)
+
 (bind-key* "C-a" 'Control-X-prefix)
 
 (bind-key* "C-q" 'beginning-of-line)
