--- a/emacs.org
+++ b/emacs.org
@@ -258,6 +258,7 @@
 (define-key tab-map (kbd "f") 'flyspell-mode)
 #+end_src
 
+
 ** anzu
 #+BEGIN_SRC emacs-lisp
 ;; Show number of matches in mode-line while searching
@@ -543,7 +544,6 @@ Recognized window header names are: 'comint, 'locals, 'registers,
       (electric-spacing-mode t)))
 #+end_src
 
-
 *** Python
 #+begin_src emacs-lisp
 (add-hook 'python-mode-hook
@@ -809,6 +809,14 @@ Recognized window header names are: 'comint, 'locals, 'registers,
 
 #+END_SRC
 
+
+** diminish
+#+begin_src emacs-lisp
+(require 'diminish)
+(diminish 'anzu-mode)
+#+end_src
+
+
 * ALIAS
 #+begin_src emacs-lisp
 (message "emacs.org : starting alias stage")
@@ -827,5 +835,4 @@ Recognized window header names are: 'comint, 'locals, 'registers,
 (defalias 'obr 'org-babel-reload-emacs-org)
 
 (message "emacs.org : done loading!")
-
 #+end_src
