--- a/emacs.org
+++ b/emacs.org
@@ -267,7 +267,6 @@
 
 ** isearch+
 #+BEGIN_SRC emacs-lisp
-(require 'isearch+)
 (eval-after-load "isearch" '(require 'isearch+))
 #+END_SRC
 
@@ -773,6 +772,7 @@ Recognized window header names are: 'comint, 'locals, 'registers,
 ** paradox
 #+BEGIN_SRC emacs-lisp
 (require 'paradox)
+(customize-set-variable 'paradox-github-token t)
 (setq paradox-display-download-count t
       paradox-display-star-count t
       paradox-automatically-star nil)
